--- a/package.json
+++ b/package.json
@@ -66,8 +66,9 @@
     "ethereumjs-tx": "^1.3.3",
     "ethereumjs-util": "^5.1.2",
     "ethereumjs-wallet": "^0.6.0",
-    "ipfs-http-client": "^27.1.0",
     "ethers": "^4.0.17",
+    "ethers-web3-bridge": "0.0.1",
+    "ipfs-http-client": "^27.1.0",
     "pure-react-carousel": "^1.12.1",
     "querystring": "^0.2.0",
     "react": "^15.4.2",
@@ -101,7 +102,7 @@
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "lint": "./node_modules/eslint/bin/eslint.js src/",
-    "lint:fix": "./node_modules/eslint/bin/eslint.js src/  --fix"      
+    "lint:fix": "./node_modules/eslint/bin/eslint.js src/  --fix"
   },
   "jest": {
     "collectCoverageFrom": [
